# goedels-poetry

./: .gitmodules  BACKTRACKING_IMPLEMENTATION.md  BACKTRACKING_TESTS.md  CHANGELOG.md  CONFIGURATION.md  Makefile  PUBLISHING.md  README.md  patch.error.diff  pyproject.toml
.github/workflows/: build-all-tag-docs.yml  ci.yml  deploy-docs.yml  deploy-tag-docs.yml  main.yml  rebuild-all-docs.yml
docs/: modules.md
goedels_poetry/: __init__.py  cli.py  framework.py  functools.py  state.py
goedels_poetry/agents/: formal_theorem_syntax_agent.py  formalizer_agent.py  informal_theorem_semantics_agent.py  informal_theorem_syntax_agent.py  proof_checker_agent.py  proof_corrector_agent.py  proof_parser_agent.py  proof_sketcher_agent.py  prover_agent.py  search_query_agent.py  sketch_backtrack_agent.py  sketch_checker_agent.py  sketch_corrector_agent.py  sketch_decomposition_agent.py  sketch_parser_agent.py  state.py  supervisor_agent.py  vector_db_agent.py
goedels_poetry/agents/util/: common.py  debug.py  kimina_ast_utils.py  kimina_server.py  state_isolation.py
goedels_poetry/config/: config.py  kimina_server.py  llm.py  paths.py
goedels_poetry/data/: config.ini
goedels_poetry/data/prompts/: decomposer-backtrack.md  decomposer-initial.md  decomposer-subsequent.md  goedel-prover-v2-initial.md  goedel-prover-v2-subsequent.md
goedels_poetry/parsers/: ast.py  util.py
goedels_poetry/parsers/util/: __init__.py  hypothesis_extraction.py
goedels_poetry/parsers/util/collection_and_analysis/: __init__.py  application_detection.py  decl_collection.py  reference_checking.py  (+3 more)
goedels_poetry/util/: tree.py
notes/: BACKTRACKING_IMPLEMENTATION.md  LAZY_LOADING_OPTIMIZATION.md
scripts/: FIX-GITHUB-PAGES.md  fix-gh-pages.sh
tests/: ast_test_utils.py  conftest.py  test_agents_util_common.py  test_all_theorem_directories_bug_fix.py  test_assumption_validation.py  test_ast_to_code_rewrite_awareness.py  test_backtracking.py  test_binder_defaults_and_exists.py  test_binder_extraction_extended.py  test_binder_type_parse_fallback.py  test_checker_parser_failure_conditions.py  test_cli_proof_file_extension.py  test_config.py  test_decl_extraction_preserves_indent.py  test_decl_extraction_robustness.py  test_decomposer_responses_api.py  test_decomposition_lemma_in_lemma.py  test_extract_proof_body_preserves_indent.py  test_foo.py  test_framework.py  test_goal_context_binder_fallback.py  test_hypothesis_extraction_multiline.py  test_kimina_agents.py  test_kimina_ast_sorries.py  test_minif2f_bug_fix.py  test_missing_types_investigation.py  test_new_bug_assumptions.py  test_new_bug_assumptions_rc3.py  test_original_bug_fix.py  test_parse_failure_handling.py  test_parsers_ast.py  test_parsers_util.py  test_phase1_arrow_domain_name_matching.py  test_phase1_proof_body_extraction.py  test_phase2_variable_extraction.py  test_phase3_conflict_detection.py  test_phase3_goal_context_format.py  test_phase3_have_binding_discovery.py  test_phase3_integration_point.py  test_phase3_investigation_comprehensive.py  (+39 more)
theorems/MOBench/: lean-from-json.py
(+24 files in other folders)
